--- a/test/index.html
+++ b/test/index.html
@@ -1,40 +1,152 @@
-import { useState } from "react";
-import { Checkbox } from "@chakra-ui/react";
-import { VStack } from "@chakra-ui/react";
+import { ColDef } from 'ag-grid-community'
+import React from 'react'
 
-export default function TradeOptions() {
-  const [selected, setSelected] = useState(["None"]);
-
-  const options = ["Buy", "Sell", "Buy to Cover", "Sell Short", "None"];
-
-  const handleChange = (option) => {
-    if (option === "None") {
-      setSelected(["None"]); // only None
-    } else {
-      let newSelected = selected.includes(option)
-        ? selected.filter((item) => item !== option) // uncheck
-        : [...selected.filter((item) => item !== "None"), option]; // check + remove None
-
-      if (newSelected.length === 0) {
-        newSelected = ["None"]; // fallback
+// Action cell renderer component - returns JSX for React compatibility
+const ActionCellRenderer = (params: any) => 
+  React.createElement('button', {
+    onClick: () => {
+      if (window.handleUnrestrict) {
+        window.handleUnrestrict(params.data.id)
       }
-      setSelected(newSelected);
+    },
+    style: {
+      background: 'none',
+      border: 'none',
+      color: '#F56565',
+      cursor: 'pointer',
+      fontSize: '16px',
+      padding: '4px 8px'
     }
-  };
+  }, '🔓')
 
-  return (
-    <VStack align="start" spacing={2}>
-      {options.map((option) => (
-        <Checkbox.Root
-          key={option}
-          checked={selected.includes(option)}
-          onCheckedChange={() => handleChange(option)}
-          value={option}
-        >
-          <Checkbox.Control />
-          <Checkbox.Label>{option}</Checkbox.Label>
-        </Checkbox.Root>
-      ))}
-    </VStack>
-  );
-}
+// Category actions cell renderer
+const CategoryActionsCellRenderer = (params: any) => 
+  React.createElement('div', {
+    style: {
+      display: 'flex',
+      gap: '8px',
+      alignItems: 'center',
+      height: '100%',
+      justifyContent: 'center'
+    }
+  }, [
+    React.createElement('button', {
+      key: 'edit',
+      onClick: () => {
+        if (window.handleEditCategory) {
+          window.handleEditCategory(params.data)
+        }
+      },
+      style: {
+        background: 'none',
+        border: 'none',
+        color: '#4FD1C7',
+        cursor: 'pointer',
+        fontSize: '16px',
+        padding: '4px'
+      }
+    }, '✏️'),
+    React.createElement('button', {
+      key: 'delete',
+      onClick: () => {
+        if (window.handleDeleteCategory) {
+          window.handleDeleteCategory(params.data)
+        }
+      },
+      style: {
+        background: 'none',
+        border: 'none',
+        color: '#F56565',
+        cursor: 'pointer',
+        fontSize: '16px',
+        padding: '4px'
+      }
+    }, '🗑️')
+  ])
+
+export const restrictedIssuersColumns: ColDef[] = [
+  { field: 'validatedIssuerName', headerName: 'Validated Issuer Name', width: 180 },
+  { field: 'userEnteredIssuerName', headerName: 'User Entered Issuer Name', width: 180 },
+  { field: 'issuerType', headerName: 'Issuer Type', width: 120 },
+  { field: 'ticker', headerName: 'Ticker', width: 100 },
+  { field: 'isin', headerName: 'ISIN', width: 130 },
+  { field: 'cusip', headerName: 'CUSIP', width: 110 },
+  { field: 'sedol', headerName: 'SEDOL', width: 110 },
+  { field: 'ultimateParentName', headerName: 'Ultimate Parent Name', width: 180 },
+  { field: 'restrictionCategory', headerName: 'Restriction Category', width: 160 },
+  { field: 'allowedTransactionType', headerName: 'Allowed Transaction Type', width: 160 },
+  { field: 'startDate', headerName: 'Start Date', width: 120 },
+  { field: 'restrictionRequestor', headerName: 'Restriction Requestor', width: 160 },
+  { field: 'restrictionNotes', headerName: 'Restriction Notes', width: 160 },
+  { field: 'restrictedBy', headerName: 'Restricted By', width: 130 },
+  { field: 'restrictedOn', headerName: 'Restricted On', width: 130 },
+  { 
+    field: 'unrestrict', 
+    headerName: 'Unrestrict', 
+    width: 100,
+    cellRenderer: ActionCellRenderer,
+    sortable: false,
+    filter: false
+  },
+]
+
+export const restrictedHistoryColumns: ColDef[] = [
+  { field: 'validatedIssuerName', headerName: 'Validated Issuer Name', width: 180 },
+  { field: 'userEnteredIssuerName', headerName: 'User Entered Issuer Name', width: 180 },
+  { field: 'issuerType', headerName: 'Issuer Type', width: 120 },
+  { field: 'isin', headerName: 'ISIN', width: 130 },
+  { field: 'cusip', headerName: 'CUSIP', width: 110 },
+  { field: 'sedol', headerName: 'SEDOL', width: 110 },
+  { field: 'ultimateParentName', headerName: 'Ultimate Parent Name', width: 180 },
+  { field: 'restrictionCategory', headerName: 'Restriction Category', width: 160 },
+  { field: 'allowedTransactionType', headerName: 'Allowed Transaction Type', width: 160 },
+  { field: 'startDate', headerName: 'Start Date', width: 120 },
+  { field: 'endDate', headerName: 'End Date', width: 120 },
+  { field: 'restrictionRequestor', headerName: 'Restriction Requestor', width: 160 },
+  { field: 'unrestrictionRequestor', headerName: 'Un-restriction Requestor', width: 160 },
+  { field: 'restrictionNotes', headerName: 'Restriction Notes', width: 160 },
+  { field: 'unrestrictionNotes', headerName: 'Un-restriction Notes', width: 160 },
+  { field: 'unrestrictedBy', headerName: 'Un-restricted By', width: 130 },
+  { field: 'unrestrictedOn', headerName: 'Un-restricted On', width: 130 },
+]
+
+export const restrictedInstrumentsColumns: ColDef[] = [
+  { field: 'instrumentName', headerName: 'Instrument Name', width: 180 },
+  { field: 'instrumentType', headerName: 'Instrument Type', width: 140 },
+  { field: 'isin', headerName: 'ISIN', width: 130 },
+  { field: 'cusip', headerName: 'CUSIP', width: 110 },
+  { field: 'sedol', headerName: 'SEDOL', width: 110 },
+  { field: 'restrictionCategory', headerName: 'Restriction Category', width: 160 },
+  { field: 'allowedTransactionType', headerName: 'Allowed Transaction Type', width: 160 },
+  { field: 'startDate', headerName: 'Start Date', width: 120 },
+  { field: 'restrictionRequestor', headerName: 'Restriction Requestor', width: 160 },
+  { field: 'restrictionNotes', headerName: 'Restriction Notes', width: 160 },
+  { field: 'restrictedBy', headerName: 'Restricted By', width: 130 },
+  { field: 'restrictedOn', headerName: 'Restricted On', width: 130 },
+  { 
+    field: 'unrestrict', 
+    headerName: 'Unrestrict', 
+    width: 100,
+    cellRenderer: ActionCellRenderer,
+    sortable: false,
+    filter: false
+  },
+]
+
+export const restrictionCategoryColumns: ColDef[] = [
+  { field: 'restrictionCategoryName', headerName: 'Restriction Category Name', width: 200 },
+  { field: 'description', headerName: 'Description', width: 180 },
+  { field: 'fundGroup', headerName: 'Fund Group', width: 130 },
+  { field: 'fundName', headerName: 'Fund Name', width: 180 },
+  { field: 'availableFor', headerName: 'Available For', width: 160 },
+  { field: 'lastModifiedBy', headerName: 'Last Modified By', width: 140 },
+  { field: 'lastModifiedOn', headerName: 'Last Modified On', width: 140 },
+  { 
+    field: 'actions', 
+    headerName: '', 
+    width: 100,
+    cellRenderer: CategoryActionsCellRenderer,
+    sortable: false,
+    filter: false
+  },
+]
